hphp/hack/test/typecheck/wildcard/wildcard_invalid.php.exp
File "wildcard_invalid.php", line 3, characters 14-14:
Wildcard typehints are not allowed in this position (Naming[2084])
File "wildcard_invalid.php", line 6, characters 25-25:
Wildcard typehints are not allowed in this position (Naming[2084])
File "wildcard_invalid.php", line 10, characters 39-39:
Wildcard typehints are not allowed in this position (Naming[2084])
